Configure Railway deployment for web app
- Update server for Railway production deployment
- Add railway.json configuration file
- Update Discord OAuth callback URLs for Railway domain
- Create comprehensive Railway deployment guide
- Add railway-setup script for easy configuration
- Update environment variables for production
- Add health check endpoint for Railway monitoring

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,18 @@ DISCORD_TOKEN=your_discord_bot_token_here
 CLIENT_ID=your_client_id_here
 GUILD_ID=your_guild_id_for_dev
 
+# Discord OAuth (for web integration)
+DISCORD_CLIENT_ID=your_discord_client_id_here
+DISCORD_CLIENT_SECRET=your_discord_client_secret_here
+DISCORD_CALLBACK_URL=https://nexium-production.up.railway.app/auth/discord/callback
+
 # Database Configuration (Railway PostgreSQL)
 DATABASE_URL=postgresql://username:password@host:port/database
+
+# Web Server Configuration
+WEB_PORT=3001
+SESSION_SECRET=your_super_secret_session_key_here
+FRONTEND_URL=https://nexium-production.up.railway.app
 
 # Environment
 NODE_ENV=development
