--- a/package.json
+++ b/package.json
@@ -6,24 +6,34 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "web": "node server/index.js",
+    "web-dev": "nodemon server/index.js",
+    "railway-setup": "node railway-setup.js",
     "migrate": "node src/database/migrations/migrate.js",
     "seed": "node src/database/seeds/seed.js",
+    "seed-characters": "node src/database/seeds/seed-characters.js",
     "deploy-commands": "node src/scripts/deploy-commands.js"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "node-cron": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
-    "dotenv": "^16.4.5",
-    "winston": "^3.15.0",
-    "node-cron": "^3.0.3",
-    "axios": "^1.7.7",
-    "moment": "^2.30.1",
-    "lodash": "^4.17.21"
+    "winston": "^3.15.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
-    "eslint": "^9.13.0"
+    "eslint": "^9.13.0",
+    "nodemon": "^3.1.7"
   },
   "engines": {
     "node": ">=20.0.0"
