Reorganize project structure: Separate docs and web app
- Move web app files to web/ folder for Railway deployment
- Clean up docs/ folder for GitHub Pages documentation only
- Remove Discord login from docs, keep for web app
- Update server paths and package.json scripts
- Add README files for both deployment targets
- Create modern web app UI with Discord OAuth focus

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "web": "node server/index.js",
-    "web-dev": "nodemon server/index.js",
+    "web": "node web/server.js",
+    "web-dev": "nodemon web/server.js",
     "railway-setup": "node railway-setup.js",
     "migrate": "node src/database/migrations/migrate.js",
     "seed": "node src/database/seeds/seed.js",
