Fix Railway deployment: Run both Discord bot and web server
- Add railway-start.js to run both services simultaneously
- Update railway.json to use new startup script
- Fix web server static file serving issues
- Add comprehensive logging and error handling
- Create missing CSS files for web interface
- Update GitHub Pages workflow for docs deployment
- Enhance bot startup logging for debugging
- Add process monitoring and auto-restart functionality
- Update deployment documentation with troubleshooting guide

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "web": "node web/server.js",
+    "web": "cd web && node server.js",
     "web-dev": "nodemon web/server.js",
+    "railway": "node railway-start.js",
     "railway-setup": "node railway-setup.js",
     "migrate": "node src/database/migrations/migrate.js",
     "seed": "node src/database/seeds/seed.js",
