--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "canvas": "npm:skia-canvas@^1.0.1",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "discord.js": "^14.16.3",
