Convert project to private: remove open source files and update documentation
- Remove LICENSE, CONTRIBUTING.md, CODE_OF_CONDUCT.md, ISSUE_TEMPLATE/
- Update .gitignore to exclude documentation files
- Update CHANGELOG.md with accurate project statistics (73 files, 6,008 lines)
- Update ROADMAP.md and NexiumBot.md with latest project information

--- a/.gitignore
+++ b/.gitignore
@@ -209,6 +209,9 @@ tramp
 
 # Project specific
 NexiumBot.md
+ROADMAP.md
+CHARACTER_IMAGES_README.md
+CDN_SETUP_GUIDE.js
 AGENT.md
 .github/copilot-instructions.md
 
