--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas": "^3.2.0",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
+    "imagekit": "^6.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
