Enhance documentation and styling
- Add new badge styles for content and character updates
- Fix changelog.html bold text rendering (convert ** to <strong>)
- Auto-fix Markdown formatting issues across all .md files
- Add markdownlint configuration and npm scripts
- Update package.json with linting scripts
- Improve documentation consistency and readability

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ pnpm-debug.log*
 .env.production.local
 .env.backup
 
+# Markdown linting configuration (optional - can be committed if team-shared)
+.markdownlint.json
+
 # Logs
 logs/
 *.log
