--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "migrate": "node src/database/migrations/migrate.js",
     "seed": "node src/database/seeds/seed.js",
     "seed-characters": "node src/database/seeds/seed-characters.js",
-    "deploy-commands": "node src/scripts/deploy-commands.js"
+    "deploy-commands": "node src/scripts/deploy-commands.js",
+    "lint:md": "markdownlint \"**/*.md\" --ignore node_modules/",
+    "lint:md:fix": "markdownlint \"**/*.md\" --ignore node_modules/ --fix",
+    "lint:md:strict": "markdownlint \"**/*.md\" --ignore node_modules/ --config .markdownlint.json"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -26,6 +29,8 @@
   },
   "devDependencies": {
     "eslint": "^9.13.0",
+    "markdownlint": "^0.38.0",
+    "markdownlint-cli": "^0.45.0",
     "nodemon": "^3.1.7"
   },
   "engines": {
