--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy-commands": "node src/scripts/deploy-commands.js",
     "lint:md": "markdownlint \"**/*.md\" --ignore node_modules/",
     "lint:md:fix": "markdownlint \"**/*.md\" --ignore node_modules/ --fix",
-    "lint:md:strict": "markdownlint \"**/*.md\" --ignore node_modules/ --config .markdownlint.json"
+    "lint:md:strict": "markdownlint \"**/*.md\" --ignore node_modules/ --config .markdownlint.json",
+    "test": "mocha tests/**/*.js --timeout 5000"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -28,10 +29,15 @@
     "winston": "^3.15.0"
   },
   "devDependencies": {
+    "chai": "^6.0.1",
     "eslint": "^9.13.0",
     "markdownlint": "^0.38.0",
     "markdownlint-cli": "^0.45.0",
-    "nodemon": "^3.1.7"
+    "mocha": "^10.8.2",
+    "nodemon": "^3.1.7",
+    "proxyquire": "^2.1.3",
+    "sinon": "^21.0.0",
+    "sqlite3": "^5.1.7"
   },
   "engines": {
     "node": ">=20.0.0"
