--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "lint:md": "markdownlint \"**/*.md\" --ignore node_modules/",
     "lint:md:fix": "markdownlint \"**/*.md\" --ignore node_modules/ --fix",
     "lint:md:strict": "markdownlint \"**/*.md\" --ignore node_modules/ --config .markdownlint.json",
-    "test": "mocha tests/**/*.js --timeout 5000"
+    "test": "mocha tests/**/*.js --timeout 5000",
+    "start:server": "node src/web/server.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "canvas": "^3.2.0",
+    "cookie-parser": "^1.4.7",
     "discord.js": "^14.22.1",
     "dotenv": "^16.4.5",
+    "express": "^5.1.0",
     "imagekit": "^6.0.0",
     "lodash": "^4.17.21",
+    "lowdb": "^6.1.1",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
