--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
-    "winston": "^3.15.0"
+    "winston": "^3.15.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "chai": "^6.0.1",
