chore(docs): README cleanup - remove HTML details, add code-fence languages, wrap long lines

--- a/.env.netlify
+++ b/.env.netlify
@@ -5,7 +5,7 @@
 DISCORD_CLIENT_ID=your_client_id_here
 DISCORD_CLIENT_SECRET=your_client_secret_here
 # IMPORTANT: Must match exactly what you register in Discord Developer Portal
-DISCORD_REDIRECT_URI=https://your-site-name.netlify.app/.netlify/functions/api/auth/discord/callback
+DISCORD_REDIRECT_URI=https://nexium-rpg.win/.netlify/functions/api/auth/discord/callback
 
 # Set to 'production' in Netlify deployment
 NODE_ENV=production
